force-app/main/default/objects/Collection_Notes__c/Collection_Notes__c.object-meta.xml
<CustomObject>
    <label>Collection Notes</label>
    <nameField>
        <displayFormat>CN-{0000000}</displayFormat>
        <label>Collection Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>