force-app/main/default/objects/Collection_Notes__c/fields/Collection_Title__c.field-meta.xml
<CustomField>
    <fullName>Collection_Title__c</fullName>
    <formula>HYPERLINK(&quot;https://na55.salesforce.com/&quot; &amp; Id, Title__c )</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>