force-app/main/default/objects/Collection_Notes__c/fields/Type_of_Notes__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Notes__c</fullName>
    <label>Type of Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>